# DGB-wallet-Guardian

./: README.md  pyproject.toml  simulate_guardian_wallet_scenario_1.py
.github/workflows/: tests.yml
docs/: technical-spec-wallet-guardian.md  wallet-guardian-whitepaper.md
docs/v3/: GUARDIAN_V3.md  guardian_attack_scenarios_v3.md
src/dgb_wallet_guardian/: adaptive_bridge.py  client.py  config.py  guardian_engine.py  models.py  policies.py  v3.py
tests/: test_adaptive_bridge.py  test_contract_v3_types.py  test_guardian_engine.py  test_imports.py  test_policies.py  test_smoke.py  test_v3_determinism.py  test_v3_fail_closed_version.py  test_v3_unknown_key_fail_closed.py
