[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgb-wallet-guardian"
version = "3.0.0"
description = "Guardian Wallet (Layer-4) — Shield Contract v3 user-protection gate for DigiByte wallets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DarekDGB" }]
keywords = ["digibyte", "wallet", "security", "guardian", "shield", "contract", "v3"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/DarekDGB/DGB-wallet-Guardian"
Repository = "https://github.com/DarekDGB/DGB-wallet-Guardian"
Issues = "https://github.com/DarekDGB/DGB-wallet-Guardian/issues"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6.0", "mypy>=1.8.0"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["dgb_wallet_guardian*"]

[tool.setuptools.package-data]
dgb_wallet_guardian = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
